--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <html>
     <head>
-        <script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
+        <script src="lib/jquery.js"></script>
         <script src="lib/raphael-min.js"></script>
         <script type="text/javascript" src="js/require.js"></script>
+        <script type="text/javascript" src="js/piano.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
 
         <script type="text/javascript">
             $(function () {
-                initAll();
+                init();
             });
         </script>
     </head>
@@ -16,9 +17,8 @@
     <body id="mainBody">
         <div id="main">
             <div id="container_canvas">
-                <canvas id="canvas">
-                    Your browser doesn't support canvas.
-                </canvas>
+                <div id="canvas">
+                </div>
             </div>
         </div>
     </body>
